update async.html.twig to support analytics.js

--- a/Resources/views/Analytics/async.html.twig
+++ b/Resources/views/Analytics/async.html.twig
@@ -3,7 +3,7 @@ if (AntiMattr == null || typeof(AntiMattr) != 'object') { var AntiMattr = window
 AntiMattr.GoogleAnalytics = {};
 
 AntiMattr.GoogleAnalytics.onGatLoad = function(callback) {
-    if (typeof _gat != "undefined") {
+    if (typeof ga == "function") {
         callback();
     } else {
         var listener = this;
@@ -14,102 +14,100 @@ AntiMattr.GoogleAnalytics.onGatLoad = function(callback) {
 };
 
 AntiMattr.GoogleAnalytics.notifyEvent = function(tracker, category, action, label, value) {
-    var event = [tracker + '_trackEvent', category, action];
+    var params = ['send', 'event', category, action];
     if (typeof label != 'undefined') {
-        event.push(label);
+        params.push(label);
         if (typeof value != 'undefined') {
-            event.push(value);
+            params.push(value);
         }
     }
-    _gaq.push(event);
+    ga.apply(window, params);
 };
 
-if ( _gaq == null || typeof(_gaq) != 'array') { var _gaq = window._gaq = []; }
+var _ga_create_params = [],
+    _ga_init_queue = [];
 
 {% for key, tracker in google_analytics.trackers %}
-    _gaq.push(['{{ google_analytics.trackerName(key) }}_setAccount', '{{ tracker.accountId }}']);
+    _ga_create_params.push('create');
+    _ga_create_params.push('{{ tracker.accountId }}');
+    _ga_create_params.push('auto');
 
     {% if tracker.domain %}
-        _gaq.push(['{{ google_analytics.trackerName(key) }}_setDomainName', '{{ tracker.domain }}']);
-
-        {% if google_analytics.getAllowAnchor(key) %}
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_setAllowAnchor', true ]);
-        {% else %}
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_setAllowAnchor', false ]);
-        {% endif %}
 
         {% if google_analytics.getAllowLinker(key) %}
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_setAllowLinker', true ]);
-        {% else %}
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_setAllowLinker', false ]);
+            _ga_create_params.push({'allowLinker': true});
+            _ga_init_queue.push(['require', 'linker']);
+
+            {% if google_analytics.getAllowAnchor(key) %}
+                _ga_init_queue.push(['linker:autoLink', ['{{ tracker.domain }}'], true)]);
+            {% else %}
+                _ga_init_queue.push(['linker:autoLink', ['{{ tracker.domain }}'])]);
+            {% endif %}
+
         {% endif %}
 
-        {% if google_analytics.getAllowHash(key) %}
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_setAllowHash', true ]);
-        {% else %}
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_setAllowHash', false ]);
-        {% endif %}
     {% endif %}
 
     {% if google_analytics.hasCustomVariables %}
         {% for customVariable in google_analytics.customVariables %}
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_setCustomVar', {{ customVariable.index }}, '{{ customVariable.name }}', '{{ customVariable.value }}', {{ customVariable.scope }}]);
+            _ga_init_queue.push(['set', 'dimension'+{{ customVariable.index }}, '{{ customVariable.value }}']);
         {% endfor %}
     {% endif %}
 
-    {% set siteSpeedSampleRate = google_analytics.getSiteSpeedSampleRate(key) %}
-    {% if siteSpeedSampleRate is defined and siteSpeedSampleRate is not null %}
-        _gaq.push(['{{ google_analytics.trackerName(key) }}_setSiteSpeedSampleRate', {{ siteSpeedSampleRate }}]);
-    {% endif %}
 
     {% if google_analytics.hasPageViewQueue %}
         {% for pageView in google_analytics.pageViewQueue %}
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_trackPageview', '{{ pageView }}']);
+            _ga_init_queue.push(['send', 'pageview', '{{ pageView }}']);
         {% endfor %}
     {% endif %}
 
     {% if google_analytics.hasCustomPageView %}
-        _gaq.push(['{{ google_analytics.trackerName(key) }}_trackPageview', '{{ google_analytics.getCustomPageView() | raw }}']);
+        _ga_create_params.push(['{{ google_analytics.trackerName(key) }}_trackPageview', '{{ google_analytics.getCustomPageView() | raw }}']);
+        _ga_init_queue.push(['send', 'pageview', '{{ google_analytics.getCustomPageView() | raw }}']);
     {% else %}
         if (window.location.hash) {
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_trackPageview', '{{ google_analytics.getRequestUri() | raw }}'+window.location.hash]);
+            _ga_init_queue.push(['send', 'pageview', '{{ google_analytics.getRequestUri() | raw }}' + window.location.hash ]);
         } else {
-            _gaq.push(['{{ google_analytics.trackerName(key) }}_trackPageview', '{{ google_analytics.getRequestUri() | raw }}']);
+            _ga_init_queue.push(['send', 'pageview', '{{ google_analytics.getRequestUri() | raw }}']);
         }
     {% endif %}
 
     {% if google_analytics.isTransactionValid %}
         {% set transaction = google_analytics.transaction %}
-        _gaq.push(['{{ google_analytics.trackerName(key) }}_addTrans',
-            '{{ transaction.orderNumber | escape('js') }}', // order number required
-            '{{ transaction.affiliation | escape('js') }}', // affiliation optional
-            '{{ transaction.total | escape('js') }}', // total optional
-            '{{ transaction.tax | escape('js') }}', // tax optional
-            '{{ transaction.shipping | escape('js') }}', // shipping optional
-            '{{ transaction.city | escape('js') }}', // city optional
-            '{{ transaction.state | escape('js') }}', // state optional
-            '{{ transaction.country | escape('js') }}' // country optional
-        ]);
+        _ga_init_queue.push(['require', 'ecommerce', 'ecommerce.js']);
+        _ga_init_queue.push(['ecommerce:addTransaction', {
+            'id': '{{ transaction.orderNumber | escape('js') }}',
+            'affiliation': '{{ transaction.affiliation | escape('js') }}',
+            'revenue': '{{ transaction.total | escape('js') }}',
+            'shipping': '{{ transaction.shipping | escape('js') }}',
+            'tax': '{{ transaction.tax | escape('js') }}'
+        }]);
 
         {% if google_analytics.hasItems %}
             {% for item in google_analytics.items %}
-                _gaq.push(['{{ google_analytics.trackerName(key) }}_addItem',
-                    '{{ item.orderNumber | escape('js') }}', // order number required
-                    '{{ item.sku | escape('js') }}', // sku required
-                    '{{ item.name | escape('js') }}', // name optional
-                    '{{ item.category | escape('js') }}', // category optional
-                    '{{ item.price | escape('js') }}', // price required
-                    '{{ item.quantity | escape('js') }}' // quantity required
-                ]);
+                _ga_init_queue.push(['ecommerce:addItem', {
+                    'id': '{{ item.orderNumber | escape('js') }}',
+                    'name': '{{ item.name | escape('js') }}',
+                    'sku': '{{ item.sku | escape('js') }}',
+                    'category': '{{ item.category | escape('js') }}',
+                    'price': '{{ item.price | escape('js') }}',
+                    'quantity': '{{ item.quantity | escape('js') }}'
+                }]);
             {% endfor %}
         {% endif %}
 
-        _gaq.push(['{{ google_analytics.trackerName(key) }}_trackTrans']);
+        _ga_init_queue.push('ecommerce:send');
 
     {% endif %}
 
     {% if google_analytics.hasEventQueue %}
         AntiMattr.GoogleAnalytics.onGatLoad(function() {
+
+        ga.apply(window, _ga_create_params); //initialize tracker
+
+        for (it in _ga_init_queue) 
+            ga.apply(window, _ga_init_queue[it]); // run additional initializing code 
+
         {% for event in google_analytics.eventQueue %}
             AntiMattr.GoogleAnalytics.notifyEvent(
                   '{{ google_analytics.trackerName(key) }}'
@@ -124,9 +122,9 @@ if ( _gaq == null || typeof(_gaq) != 'array') { var _gaq = window._gaq = []; }
 
 {% endfor %}
 
-(function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? '{{ google_analytics.sourceHttps | raw }}' : '{{ google_analytics.sourceHttp | raw }}') + '{{ google_analytics.sourceEndpoint | raw }}';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
 </script>
